--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- font -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter&family=El+Messiri:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
     <!-- icon -->
@@ -105,10 +105,10 @@
             <div class="row justify-content-center align-items-center ">
                 <div class="col-lg-6 px-4 d-flex justify-content-center">
                     <div class="home-text  text-lg-start text-center">
-                        <h5 class=" text-secondary">Official site
+                        <h5 class="">Official site
                         </h5>
                         <h1 class="title text-uppercase fw-bold mt-3 mb-2 text-primary">thoyiburrohman</h1>
-                        <h5 class=" text-secondary mb-3">Employe & Freelancer</h5>
+                        <h5 class="mb-3">Employe & Freelancer</h5>
                         <a href="#contact" class="btn btn-primary text-capitalize me-2">Contact me</a>
                         <a href="/download-cv"class="btn btn-outline-primary text-capitalize">Download CV</a>
                         <div class="social justify-content-lg-start justify-content-center mt-3">
