--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                         </h5>
                         <h1 class="title text-uppercase fw-bold mt-3 mb-2 text-primary">thoyiburrohman</h1>
                         <h5 class="mb-3">Employe & Freelancer</h5>
-                        <a href="#contact" class="btn btn-primary text-capitalize me-2">Contact me</a>
-                        <a href="/download-cv"class="btn btn-outline-primary text-capitalize">Download CV</a>
+                        <a href="https/wa.me/+6281285247694" class="btn btn-primary text-capitalize me-2">Hire Me</a>
+                        <!-- <a href="/download-cv"class="btn btn-outline-primary text-capitalize">Download CV</a> -->
                         <div class="social justify-content-lg-start justify-content-center mt-3">
                             <div class="social-item">
                                 <a href="https://facebook.com/thoyiburrohman"><i
@@ -204,8 +204,9 @@
                         </div>
                     </div>
                     <div class="link-to text-center text-lg-start">
-                        <a href="#contact" class="btn btn-primary text-capitalize me-2">Contact me</a>
-                        <a href="/download-cv"class="btn btn-outline-primary text-capitalize">Download CV</a>
+                        <a href="https/wa.me/+6281285247694" class="btn btn-primary text-capitalize me-2">Hire Me</a>
+
+                        <!-- <a href="/download-cv"class="btn btn-outline-primary text-capitalize">Download CV</a> -->
                     </div>
                 </div>
             </div>
